Fix the menu dimensions when on of the item is too long (bug 2018134)

--- a/web/views_manager.css
+++ b/web/views_manager.css
@@ -427,7 +427,8 @@
           }
 
           > .popupMenu {
-            width: auto;
+            width: 100%;
+            min-width: fit-content;
             z-index: 1;
           }
         }
